[gd_scene load_steps=24 format=3 uid="uid://cr0ewxm88421o"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_qtxou"]
[ext_resource type="Texture2D" uid="uid://dd5j727no5yk1" path="res://assets/items/coin.png" id="2_jxb56"]
[ext_resource type="LabelSettings" uid="uid://ct3rrmjel6kri" path="res://resources/money_label_settings.tres" id="3_r0xlf"]
[ext_resource type="PackedScene" uid="uid://0uikh2qw81gj" path="res://scenes/ui/status_icon.tscn" id="4_c8523"]
[ext_resource type="PackedScene" uid="uid://bm5fynuloflw8" path="res://scenes/ui/stat_bar.tscn" id="5_vrkdx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl30t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h1nm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_061y7"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bkb3"]
atlas = ExtResource("2_jxb56")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gshi2"]
atlas = ExtResource("2_jxb56")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e6b4"]
atlas = ExtResource("2_jxb56")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77t2o"]
atlas = ExtResource("2_jxb56")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_87vab"]
atlas = ExtResource("2_jxb56")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmj2u"]
atlas = ExtResource("2_jxb56")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5dui"]
atlas = ExtResource("2_jxb56")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_16s21"]
atlas = ExtResource("2_jxb56")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ir72j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bkb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gshi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e6b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77t2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87vab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmj2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5dui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16s21")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ewgg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esw76"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6vvd"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tk0v2"]
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjg4x"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jiqru"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtxou")

[node name="UpperHalfPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_wl30t")

[node name="MoneyMargin" type="MarginContainer" parent="UpperHalfPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20

[node name="MoneyPanel" type="PanelContainer" parent="UpperHalfPanel/MoneyMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6h1nm")

[node name="MarginContainer" type="MarginContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer"]
layout_mode = 2

[node name="CoinMargin" type="MarginContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer/CoinMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_061y7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer/CoinMargin/PanelContainer"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ir72j")
autoplay = "default"

[node name="CounterMargin" type="MarginContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer/CounterMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer/CounterMargin/HBoxContainer"]
layout_mode = 2
text = "x"
label_settings = ExtResource("3_r0xlf")

[node name="MoneyLabel" type="Label" parent="UpperHalfPanel/MoneyMargin/MoneyPanel/MarginContainer/HBoxContainer/CounterMargin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_r0xlf")

[node name="EnemyHealthPanel" type="PanelContainer" parent="UpperHalfPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.2
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ewgg")

[node name="MarginContainer" type="MarginContainer" parent="UpperHalfPanel/EnemyHealthPanel"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UpperHalfPanel/EnemyHealthPanel/MarginContainer"]
layout_mode = 2

[node name="EnemyHealthContainer" type="MarginContainer" parent="UpperHalfPanel/EnemyHealthPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyHealthBar" type="ProgressBar" parent="UpperHalfPanel/EnemyHealthPanel/MarginContainer/VBoxContainer/EnemyHealthContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_esw76")
theme_override_styles/fill = SubResource("StyleBoxFlat_c6vvd")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="EnemyLabelContainer" type="MarginContainer" parent="UpperHalfPanel/EnemyHealthPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10

[node name="EnemyLabel" type="Label" parent="UpperHalfPanel/EnemyHealthPanel/MarginContainer/VBoxContainer/EnemyLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Sample Text"
label_settings = SubResource("LabelSettings_tk0v2")
horizontal_alignment = 1

[node name="LowerHalfPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_wl30t")

[node name="SpellsPanel" type="PanelContainer" parent="LowerHalfPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.5
offset_top = -129.0
offset_right = 200.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hjg4x")

[node name="SpellMargin" type="MarginContainer" parent="LowerHalfPanel/SpellsPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="LowerHalfPanel/SpellsPanel/SpellMargin"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="HBox" type="HBoxContainer" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="binding_spell_1" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer/HBox" instance=ExtResource("4_c8523")]
unique_name_in_owner = true
layout_mode = 2

[node name="binding_spell_2" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer/HBox" instance=ExtResource("4_c8523")]
unique_name_in_owner = true
layout_mode = 2

[node name="binding_spell_3" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer/HBox" instance=ExtResource("4_c8523")]
unique_name_in_owner = true
layout_mode = 2

[node name="binding_spell_4" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer/HBox" instance=ExtResource("4_c8523")]
unique_name_in_owner = true
layout_mode = 2

[node name="ManaBar" parent="LowerHalfPanel/SpellsPanel/SpellMargin/VBoxContainer" instance=ExtResource("5_vrkdx")]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusEffectPanel" type="PanelContainer" parent="LowerHalfPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -381.0
offset_top = -109.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jiqru")

[node name="HealthMargin" type="MarginContainer" parent="LowerHalfPanel/StatusEffectPanel"]
layout_mode = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="LowerHalfPanel/StatusEffectPanel/HealthMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="StatusEffectContainer" type="HBoxContainer" parent="LowerHalfPanel/StatusEffectPanel/HealthMargin/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="HealthBar" parent="LowerHalfPanel/StatusEffectPanel/HealthMargin/VBoxContainer" instance=ExtResource("5_vrkdx")]
layout_mode = 2
stat = 1
